--- a/Cakwe/.htaccess
+++ b/Cakwe/.htaccess
@@ -4,4 +4,4 @@ RewriteBase /Cakwe/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ routing.php?url=$1 [L,QSA]
+RewriteRule ^(.*)$ routes.php?url=$1 [L,QSA]
